Closed Bug 1297649 Opened 9 years ago Closed 9 years ago

Misleading indentation in UtilInterface.cpp and nsMaiInterfaceDocument.cpp

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: nical, Assigned: Cykesiopka)

References

Details

Attachments

(1 file)

Here: http://searchfox.org/mozilla-central/rev/b38dbd1378cea4ae83bbc8a834cdccd02bbc5347/accessible/atk/UtilInterface.cpp#257 This one looks like it is not actually a bug. The code after the return 0; should have one less indentation level, and the if should be braced. This is important because almost all other misleading indentation warnings I have come across so far are actual bugs.
Blocks: 1297639
(In reply to Nicolas Silva [:nical] from comment #1) > Same thing in nsMaiInterfaceDocument.cpp: > http://searchfox.org/mozilla-central/rev/ > b38dbd1378cea4ae83bbc8a834cdccd02bbc5347/accessible/atk/ > nsMaiInterfaceDocument.cpp#64 correct for both, the indentation on the first is also a wierd mixture of 2 and 4 space, it'd be nice to fix that while there fixing whitespace.
Summary: Misleading indentation in UtilInterface.cpp → Misleading indentation in UtilInterface.cpp and nsMaiInterfaceDocument.cpp
Assignee: nobody → cykesiopka.bmo
Status: NEW → ASSIGNED
Attachment #8786705 - Flags: review?(tbsaunde+mozbugs) → review+
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/7ca39559f08e Fix misleading indentation in UtilInterface.cpp and nsMaiInterfaceDocument.cpp. r=tbsaunde
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: