Bug 1297649 - Fix misleading indentation in UtilInterface.cpp and nsMaiInterfaceDocument.cpp. r=tbsaunde

MozReview-Commit-ID: 4NxqGBDlIrW